Pipeline summary updated

--- a/README.org
+++ b/README.org
@@ -31,8 +31,8 @@ This git repository contains RNA-seq pipelines for transcriptome assembly, gene 
 |                                   | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Slurm-abundance]]           | S. Bassim   | 2017 |                     |
 | Transcriptome size reduction      | [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Slurm]]                     | S. Bassim   | 2017 |                     |
 | Gene expression                   | [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][R]] (RNA-seq)               | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.R][R]] (affymetrix)    | S. Bassim   | 2017 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][bash]] (affymetrix summary) |             |      |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][R]] (affymetrix)    | S. Bassim   | 2017 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][bash]] (affymetrix summary) | S. Bassim   | 2018 |                     |
 | Shotgun annotation                | [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][kraken]]                    | S. Bassim   | 2016 |                     |
 | Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][diamond]]                   | S. Bassim   | 2016 |                     |
 |                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][interpro]]                  | S. Bassim   | 2016 |                     |
