--- a/README.org
+++ b/README.org
@@ -22,24 +22,25 @@
 
 This git repository contains RNA-seq pipelines for transcriptome assembly, gene expression, gene annotation, and other. All scripts are running on [[https://www.xsede.org/][XSEDE]] supercomputers and [[http://www.iacs.stonybrook.edu/resources/handy-accounts#overlay-context=resources/accounts][LIred]] cluster in the US, including Greenfield, Bridges, and LIred servers.
 
-| Workflow                          | Pipeline                  | Author      | Year | Related Publication |
-|-----------------------------------+---------------------------+-------------+------+---------------------|
-| Data mining of gene annotation    | [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][bash]]                      | S. Bassim   | 2016 |                     |
-| Transcriptome assembly            | [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][trinity]]                   | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][bwa]]                       | S. Bassim   | 2016 |                     |
-| Host-pathogen separation          | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][PBS]]                       | S. Bassim   | 2017 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Slurm-abundance]]           | S. Bassim   | 2017 |                     |
-| Transcriptome size reduction      | [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Slurm]]                     | S. Bassim   | 2017 |                     |
-| Gene expression                   | [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][R]] (RNA-seq)               | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][R]] (affymetrix)    | S. Bassim   | 2017 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][bash]] (affymetrix summary) | S. Bassim   | 2018 |                     |
-| Shotgun annotation                | [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][kraken]]                    | S. Bassim   | 2016 |                     |
-| Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][diamond]]                   | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][interpro]]                  | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][hmmer]]                     | S. Bassim   | 2016 |                     |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][blast]]                     | S. Bassim   | 2016 |                     |
-| Network analysis                  | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.R][R]]               | S. Bassim   | 2016 |                     |
-| Hierarchical clustering           | [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.buildo.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.R][R]]               | S. Bassim   | 2016 |                     |
-| Regularization (machine learning) | coming ...                |             |      |                     |
-| Packages                          |                           | [[https://github.com/neocruiser/pipelines/blob/master/packages.org][Open Source]] |      |                     |
+| Workflow                          | Pipeline                         | Author      | Year | Related Publication |
+|-----------------------------------+----------------------------------+-------------+------+---------------------|
+| Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][bash]]                             | S. Bassim   | 2016 |                     |
+| Transcriptome assembly            | [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][trinity]]                          | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][bwa]]                              | S. Bassim   | 2016 |                     |
+| Host-pathogen read separation     | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][PBS]]                              | S. Bassim   | 2017 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Slurm-abundance]]                  | S. Bassim   | 2017 |                     |
+| Transcriptome size reduction      | [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Slurm]]                            | S. Bassim   | 2017 |                     |
+| Gene expression                   | [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][R]] (RNA-seq)                      | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][R]] (affymetrix)           | S. Bassim   | 2017 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][bash]] (affymetrix summary)        | S. Bassim   | 2018 |                     |
+| Shotgun annotation                | [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][kraken]]                           | S. Bassim   | 2016 |                     |
+| Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][diamond]]                          | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][interpro]]                         | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][hmmer]]                            | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][blast]]                            | S. Bassim   | 2016 |                     |
+| Network analysis                  | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.R][R]]                      | S. Bassim   | 2016 |                     |
+| Clustering                        | [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.buildo.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.R][R]] (v2.0, hierarchical) | S. Bassim   | 2016 |                     |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmaps.3.0.R][R]] (v3.0)                 | S. Bassim   | 2018 |                     |
+| Regularization (machine learning) | coming ...                       | S. Bassim   |      |                     |
+| Packages                          |                                  | [[https://github.com/neocruiser/pipelines/blob/master/packages.org][Open Source]] |      |                     |
 
