--- a/README.org
+++ b/README.org
@@ -45,8 +45,8 @@ Licence: MIT Licence
 | Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][Diamond]]          | multi      | v1.0    | S. Bassim   | 2016 |
 |                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][InterPro]]         | multi      | v2.0    | S. Bassim   | 2016 |
 |                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][HMMER]]            | multi      | v0.3    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][Blast+]]            | multi      | v1.0    | S. Bassim   | 2016 |
-| Network analysis                  | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.R][R]]      | RNA-seq    | v1.0    | S. Bassim   | 2016 |
+|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][Blast+]]           | multi      | v1.0    | S. Bassim   | 2016 |
+| Network analysis                  | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.R][R]]      | RNA-seq    | legacy  | S. Bassim   | 2016 |
 |                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.affymetrix.R][R]]        | Affymetrix | v2.0    | S. Bassim   | 2018 |
 |                                   | [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian - R]]     | Agilent    | v0.5    | S. Bassim   | 2014 |
 | Clustering                        | [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.buildo.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.R][R]]      | RNA-seq    | v2.0    | S. Bassim   | 2016 |
