--- a/README.org
+++ b/README.org
@@ -29,31 +29,48 @@ are running on H4H cluster at [[http://www.uhnresearch.ca/][UHN]].
 
 Licence: MIT Licence
 
-
-| Workflow                          | Pipeline         | Platform   | Version | Author      | Year |
-|-----------------------------------+------------------+------------+---------+-------------+------|
-| Gene annotation                   | [[Https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][BASH - mining]]    | multi      | v5.0    | S. Bassim   | 2016 |
-| Transcriptome assembly            | [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][trinity]]          | RNA-seq    | v3.5    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][BWA]]              | RNA-seq    | v0.1    | S. Bassim   | 2016 |
-| Host-pathogen read separation     | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][PBS]]              | RNA-seq    | v0.1    | S. Bassim   | 2017 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Slurm-abundance]]  | RNA-seq    | v0.1    | S. Bassim   | 2017 |
-| Transcriptome size reduction      | [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Slurm]]            | RNA-seq    | v0.1    | S. Bassim   | 2017 |
-| Gene expression                   | [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][R]]                | RNA-seq    | v1.0    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][R]]        | Affymetrix | v2.0    | S. Bassim   | 2017 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][BASH - mining]]    | Affymetrix | v1.0    | S. Bassim   | 2018 |
-| Shotgun annotation                | [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][Kraken]]           | Shotgun    | v1.0    | S. Bassim   | 2016 |
-| Gene annotation                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][Diamond]]          | multi      | v1.0    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][InterPro]]         | multi      | v2.0    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][HMMER]]            | multi      | v0.3    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][Blast+]]           | multi      | v1.0    | S. Bassim   | 2016 |
-| Network analysis                  | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.R][R]]      | RNA-seq    | legacy  | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian - R]]     | Agilent    | v0.5    | S. Bassim   | 2014 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.affymetrix.R][R]]        | Affymetrix | v2.0    | S. Bassim   | 2018 |
-| Clustering                        | [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][PBS]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmaps.3.0.R][R]]        | Affymetrix | v3.0    | S. Bassim   | 2018 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.build.slurm][Slurm]] and [[https://github.com/neocruiser/pipelines/blob/master/r/heatmap.R][R]]      | RNA-seq    | v2.0    | S. Bassim   | 2016 |
-|                                   | [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy Clustering]] | Agilent    | v0.3    | S. Bassim   | 2014 |
-| Regularization (machine learning) | [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Lasso and ANN]]    | RNA-seq    | v1.0    | S. Bassim   | 2015 |
-|                                   | [[https://github.com/neocruiser/pipelines/blob/master/r/classification.R][Bagging & NN]]     | Affymetrix | v2.0    | S. Bassim   | 2018 |
-| Packages                          |                  |            |         | [[https://github.com/neocruiser/pipelines/blob/master/packages.org][Open Source]] |      |
-
-
+* Pipelines in interpreted languages (scripts can be adjusted for any sample size)
+1. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.h4h.pbs][Affymetrix sample automation]] in bash (Bassim 2018)
+2. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.2.0.R][Affymetrix normalization and expression analyses]] in R (Bassim 2018)
+3. [[https://github.com/neocruiser/pipelines/blob/master/r/affymetrix.summary.h4h.sh][Automation to create summary report of all expression analyses]] in
+   bash (Bassim 2018)
+4. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.h4h.pbs][Clustering and network automation]] in bash (Bassim 2018)
+5. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.affymetrix.R][Network inference based on weighted scoring and different
+   correlation and data transformation methods]] in R (Bassim 2018)
+6. [[https://github.com/neocruiser/pipelines/blob/master/r/heatmaps.3.0.R][Clustering automation with different expression aggregation methods
+   and bootstrapping]] in R (Bassim 2018)
+7. [[https://github.com/neocruiser/pipelines/blob/master/r/classification.R][Machine learning to classify by bagging and ensemble learning for
+   risk factor predictions]] in R (Bassim 2018)
+8. [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][Aggregating large scale annotation of cDNA sequences with over 13
+   databases, GO-terms, KEGG, reactome]] in bash (Bassim 2016)
+9. [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][Transcriptome assembly of RNA-seq data optimized on high
+   performance clusters]] in bash (Bassim 2016)
+10. [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][Genome-guided assembly of RNA-seq data for new gene discovery]] in
+    bash (Bassim 2016)
+11. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][Separating reads from dual RNA sequencing of host and parasite]] in
+    bash (Bassim 2017)
+12. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Sequence abundance and expression from dual RNA-seq]] in R (Bassim 2017)
+13. [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Reducing transcriptome size and noise by correcting for read
+    abundance]] in bash (Bassim 2017)
+14. [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][Differential gene expression for RNA-seq data using multi-method
+    approach with summary report aggregation]] in bash and R (Bassim 2016)
+15. [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][Read classification for virus or most microbes identification from
+    shotgun sequencing data]] in bash (bash 2016)
+16. [[https://github.com/neocruiser/pipelines/blob/master/annotation/diamond-bridges.slurm][Fast sequence annotation against NCBI databases using blast and
+    diamond]] in bash (Bassim 2016)
+17. [[https://github.com/neocruiser/pipelines/blob/master/annotation/interproscan-bridges.slurm][Functional annotation of sequences by protein domains
+    interrogating over 10 databases]] in bash (Bassim 2016)
+18. [[https://github.com/neocruiser/pipelines/blob/master/annotation/hmmscan-iacs.pbs][Functional annotation with Hidden Markov models using HMM profiles]]
+    in bash (Bassim 2015)
+19. [[https://github.com/neocruiser/pipelines/blob/master/annotation/blast-iacs.split.pbs][Sequence annotation of sequencing data against NCBI databases with
+    more metadata per gene]] in bash (Bassim 2016)
+20. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.slurm][Creating genetic cross-talk networks from host and pathogen
+    RNA-seq interactions]] in bash (Bassim 2016)
+21. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.R][Calculating correlations and network scores from RNA-seq
+    host-pathogen data]] in R (Bassim 2016)
+22. [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian network inference from Agilent micrarray timeseries data]]
+    in R (Bassim 2013)
+23. [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy clustering on Agilent microarray timeseries data for
+    biomarker discovery]] in R (Bassim 2013)
+24. [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Regularization with lasso and ensemble learning build on top ANN,
+    generalized linear model, and bagging]] in R (Bassim 2014)
