--- a/README.org
+++ b/README.org
@@ -41,17 +41,17 @@ Licence: MIT Licence
    and bootstrapping]] in R (Bassim 2018)
 7. [[https://github.com/neocruiser/pipelines/blob/master/r/classification.R][Machine learning to classify by bagging and ensemble learning for
    risk factor predictions]] in R (Bassim 2018)
-8. [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][Aggregating large scale annotation of cDNA sequences with over 13
-   databases, GO-terms, KEGG, reactome]] in bash (Bassim 2016)
-9. [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][Transcriptome assembly of RNA-seq data optimized on high
-   performance clusters]] in bash (Bassim 2016)
-10. [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][Genome-guided assembly of RNA-seq data for new gene discovery]] in
-    bash (Bassim 2016)
-11. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][Separating reads from dual RNA sequencing of host and parasite]] in
-    bash (Bassim 2017)
-12. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Sequence abundance and expression from dual RNA-seq]] in R (Bassim 2017)
-13. [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Reducing transcriptome size and noise by correcting for read
+8. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug2.pbs][Separating reads from dual RNA sequencing of host and parasite]] in
+   bash (Bassim 2017)
+9. [[https://github.com/neocruiser/pipelines/blob/master/debug/debug4.slurm][Sequence abundance and expression from dual RNA-seq]] in R (Bassim 2017)
+10. [[https://github.com/neocruiser/pipelines/blob/master/expression/filter-bridges.slurm][Reducing transcriptome size and noise by correcting for read
     abundance]] in bash (Bassim 2017)
+11. [[https://github.com/neocruiser/pipelines/blob/master/mining/automated_analyses.sh][Aggregating large scale annotation of cDNA sequences with over 13
+    databases, GO-terms, KEGG, reactome]] in bash (Bassim 2016)
+12. [[https://github.com/neocruiser/pipelines/blob/master/assembly/trinity-bridges.slurm][Transcriptome assembly of RNA-seq data optimized on high
+    performance clusters]] in bash (Bassim 2016)
+13. [[https://github.com/neocruiser/pipelines/blob/master/mapping/genome_guided_assemblies.pbs][Genome-guided assembly of RNA-seq data for new gene discovery]] in
+    bash (Bassim 2016)
 14. [[https://github.com/neocruiser/pipelines/blob/master/expression/degs-bridges.slurm][Differential gene expression for RNA-seq data using multi-method
     approach with summary report aggregation]] in bash and R (Bassim 2016)
 15. [[https://github.com/neocruiser/pipelines/blob/master/annotation/kraken.db-bridges.slurm][Read classification for virus or most microbes identification from
@@ -68,9 +68,13 @@ Licence: MIT Licence
     RNA-seq interactions]] in bash (Bassim 2016)
 21. [[https://github.com/neocruiser/pipelines/blob/master/r/weighted.nets.cross.species.R][Calculating correlations and network scores from RNA-seq
     host-pathogen data]] in R (Bassim 2016)
-22. [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian network inference from Agilent micrarray timeseries data]]
+22. [[https://github.com/neocruiser/pipelines/blob/master/calling/mappingV6.5.sh][Filtering and variant calling with indel correction on sequencing
+    data]] in bash (Bassim 2015)
+23. [[https://github.com/neocruiser/pipelines/blob/master/calling/mapNoCount.sh][Sorting, duplicate removal, and QC on variant calls]] in bash
+    (Bassim 2015)
+24. [[https://github.com/neocruiser/thesis2014/blob/master/ebdbn/ebdbn%2520-%2520W2.R][Bayesian network inference from Agilent micrarray timeseries data]]
     in R (Bassim 2013)
-23. [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy clustering on Agilent microarray timeseries data for
-    biomarker discovery]] in R (Bassim 2013)
-24. [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Regularization with lasso and ensemble learning build on top ANN,
+25. [[https://github.com/neocruiser/thesis2014/blob/master/Paper3/paper3.R][Regularization with lasso and ensemble learning build on top ANN,
     generalized linear model, and bagging]] in R (Bassim 2014)
+26. [[https://github.com/neocruiser/thesis2014/blob/master/mfuzz/mfuzz.R][Fuzzy clustering on Agilent microarray timeseries data for
+    biomarker discovery]] in R (Bassim 2013)
